syntax = "proto3";

package upload;

service Upload {
	rpc Upload (UploadRequest) returns (UploadReply) {}
}

message UploadRequest {
	// Binary executable file path.
	string filename = 1;
	// File hash.
	string hash = 2;
	// File content.
	bytes content = 3;
}

message UploadReply {
	string id = 1;
}
